force-app/main/default/objects/BillingAccount__c/BillingAccount__c.object-meta.xml
<CustomObject>
    <label>BAN</label>
    <nameField>
        <label>BAN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BANs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>