force-app/main/default/objects/BillingAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BANs</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>