force-app/main/default/objects/BillingAccount__c/fields/Additional_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Invoice_Email__c</fullName>
    <inlineHelpText>Secondary email addresses to CC on invoice delivery. Enter one address per line. Use when finance, procurement, or an AP team also need to receive the invoice.</inlineHelpText>
    <label>Additional Email (2 max)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>