force-app/main/default/objects/BillingAccount__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <inlineHelpText>A short descriptive name for this BAN used internally - e.g. &quot;SG01 - Colocation&quot; or &quot;HK02 - Power&quot;. Helps distinguish multiple BANs under the same account.</inlineHelpText>
    <label>Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>