force-app/main/default/objects/BillingAccount__c/fields/BAN_Currency__c.field-meta.xml
<CustomField>
    <fullName>BAN_Currency__c</fullName>
    <description>The transactional currency for this BAN. Auto-populated from the subsidiary&apos;s default currency when the BAN is created, but can be overridden by the user (e.g. to USD). Independent of CurrencyIsoCode and Different_Invoice_Currency__c.</description>
    <inlineHelpText>Currency for this BAN. Defaults from subsidiary but can be changed.</inlineHelpText>
    <label>BAN Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>