force-app/main/default/objects/BillingAccount__c/fields/BAN_ID_INV_Label__c.field-meta.xml
<CustomField>
    <fullName>BAN_ID_INV_Label__c</fullName>
    <label>BAN ID INV Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>