force-app/main/default/objects/BillingAccount__c/fields/BAN_ID_Reference__c.field-meta.xml
<CustomField>
    <fullName>BAN_ID_Reference__c</fullName>
    <label>BAN ID Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>