force-app/main/default/objects/BillingAccount__c/fields/BAN_Number__c.field-meta.xml
<CustomField>
    <fullName>BAN_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated billing account identifier with country prefix. This is the BANID used in BOSS for sales order line tagging and invoicing.</inlineHelpText>
    <label>BAN ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>