force-app/main/default/objects/BillingAccount__c/fields/Billing_Address_Display__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Display__c</fullName>
    <description>Street, city and country joined into one line for display. Exists because BillingAccount__c has no compound address field, and the Flow data table on the Quote &quot;Link BAN&quot; screen needs a single column. Blank components are skipped so no stray commas appear.</description>
    <formula>IF(ISBLANK(BillingStreet__c), &quot;&quot;, BillingStreet__c)
&amp; IF(AND(NOT(ISBLANK(BillingStreet__c)), OR(NOT(ISBLANK(BillingCity__c)), NOT(ISBLANK(BillingCountry__c)))), &quot;, &quot;, &quot;&quot;)
&amp; IF(ISBLANK(BillingCity__c), &quot;&quot;, BillingCity__c)
&amp; IF(AND(NOT(ISBLANK(BillingCity__c)), NOT(ISBLANK(BillingCountry__c))), &quot;, &quot;, &quot;&quot;)
&amp; IF(ISBLANK(BillingCountry__c), &quot;&quot;, BillingCountry__c)</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>