force-app/main/default/objects/BillingAccount__c/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <description>Display-only name of the Billing Contact. Exists because the Flow data table on the Quote &quot;Link BAN&quot; screen can only render fields on this record, not fields across a lookup - without this it would show the raw Contact Id.</description>
    <formula>IF(ISBLANK(Billing_Contact__r.FirstName), Billing_Contact__r.LastName, Billing_Contact__r.FirstName &amp; &quot; &quot; &amp; Billing_Contact__r.LastName)</formula>
    <label>Billing Contact Name</label>
    <type>Text</type>
</CustomField>