force-app/main/default/objects/BillingAccount__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>