force-app/main/default/objects/BillingAccount__c/fields/Charge_Period_Presentment__c.field-meta.xml
<CustomField>
    <fullName>Charge_Period_Presentment__c</fullName>
    <inlineHelpText>How the charge period is presented on invoices. Standard shows the full charge period detail. Summary shows a condensed view.</inlineHelpText>
    <label>Charge Period Presentment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Billing Cycle Date</fullName>
                <isActive>false</isActive>
                <label>Billing Cycle Date</label>
            </value>
            <value>
                <fullName>Calendar Month</fullName>
                <isActive>false</isActive>
                <label>Calendar Month</label>
            </value>
            <value>
                <fullName>Consolidated</fullName>
                <isActive>false</isActive>
                <label>Consolidated</label>
            </value>
            <value>
                <fullName>Itemised</fullName>
                <isActive>false</isActive>
                <label>Itemised</label>
            </value>
            <value>
                <fullName>Service Month</fullName>
                <isActive>false</isActive>
                <label>Service Month</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>