force-app/main/default/objects/BillingAccount__c/fields/DE_Entity__c.field-meta.xml
<CustomField>
    <fullName>DE_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The DE subsidiary for this BAN. Defaults from the Account&apos;s Primary Subsidiary or the Quote&apos;s subsidiary. Can be changed during BAN creation.</description>
    <inlineHelpText>The DE subsidiary for this BAN. Determines the default currency and finance routing.</inlineHelpText>
    <label>DE Subsidiary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>DE Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Subsidiary_BANs</relationshipName>
    <type>Lookup</type>
</CustomField>