force-app/main/default/objects/BillingAccount__c/fields/DE_Subsidiary_Name__c.field-meta.xml
<CustomField>
    <fullName>DE_Subsidiary_Name__c</fullName>
    <formula>DE_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE Subsidiary Name</label>
    <type>Text</type>
</CustomField>