force-app/main/default/objects/BillingAccount__c/fields/Different_Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Different_Invoice_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicates this BAN uses a different invoice currency than the default USD.</description>
    <inlineHelpText>Check this box if the invoice currency for this BAN differs from the default.</inlineHelpText>
    <label>Different Invoice Currency</label>
    <type>Checkbox</type>
</CustomField>