force-app/main/default/objects/BillingAccount__c/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Annually</fullName>
                <isActive>false</isActive>
                <label>Annually</label>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
                <isActive>false</isActive>
                <label>Half-Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>