force-app/main/default/objects/BillingAccount__c/fields/Invoice_Presentment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Presentment__c</fullName>
    <inlineHelpText>Invoice template style. EDGE Default uses the standard Digital Edge format. Customer Remarks adds custom text or remarks in a dedicated section.</inlineHelpText>
    <label>Invoice Presentment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EDGE Default</fullName>
                <default>true</default>
                <label>EDGE Default</label>
            </value>
            <value>
                <fullName>Customer Remarks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>