force-app/main/default/objects/BillingAccount__c/fields/InvoiceDeliveryMode__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDeliveryMode__c</fullName>
    <label>Invoice Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
            <value>
                <fullName>Customer Portal (CPEv2)</fullName>
                <isActive>false</isActive>
                <label>Customer Portal (CPEv2)</label>
            </value>
            <value>
                <fullName>E-billing</fullName>
                <isActive>false</isActive>
                <label>E-billing</label>
            </value>
            <value>
                <fullName>EDI</fullName>
                <isActive>false</isActive>
                <label>EDI</label>
            </value>
            <value>
                <fullName>Email (PDF attachment)</fullName>
                <isActive>false</isActive>
                <label>Email (PDF attachment)</label>
            </value>
            <value>
                <fullName>Printed (postal)</fullName>
                <isActive>false</isActive>
                <label>Printed (postal)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>