force-app/main/default/objects/BillingAccount__c/fields/Odoo_Invoice_Freq_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Invoice_Freq_ID__c</fullName>
    <inlineHelpText>Populated automatically by the Odoo integration. Do not edit manually.</inlineHelpText>
    <label>Odoo Invoice Frequency ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>