force-app/main/default/objects/BillingAccount__c/fields/Odoo_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Partner_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Populated automatically by the Odoo integration. Do not edit manually.</inlineHelpText>
    <label>Odoo BAN Partner ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>