force-app/main/default/objects/BillingAccount__c/fields/Odoo_Sync_Payload__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sync_Payload__c</fullName>
    <label>Odoo Sync Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>