force-app/main/default/objects/BillingAccount__c/fields/Odoo_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sync_Status__c</fullName>
    <inlineHelpText>Shows whether this BAN has been successfully synced to Odoo. Sync Failed means the integration encountered an error - check the integration log and contact the Odoo admin.</inlineHelpText>
    <label>Odoo Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>