force-app/main/default/objects/BillingAccount__c/fields/Source_Quote__c.field-meta.xml
<CustomField>
    <fullName>Source_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Quote from which this BAN was created. Populated automatically by the Create BAN flow when launched from a Quote context.</description>
    <inlineHelpText>The sales quote that triggered the creation of this BAN.</inlineHelpText>
    <label>Source Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Source_BANs</relationshipName>
    <type>Lookup</type>
</CustomField>