force-app/main/default/objects/BillingAccount__c/fields/Tagged_To_Quote__c.field-meta.xml
<CustomField>
    <fullName>Tagged_To_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System-set: TRUE once this BAN has been referenced (tagged) by any Quote. Once TRUE the BAN currency is locked (VR_BAN_Currency_Locked). One-way — never reset, because a BAN can serve multiple quotes.</description>
    <inlineHelpText>Set automatically when a quote uses this BAN. Once set, the BAN&apos;s currency is locked.</inlineHelpText>
    <label>Tagged To Quote</label>
    <type>Checkbox</type>
</CustomField>