force-app/main/default/objects/BillingAccount__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <inlineHelpText>Free text tags for internal categorisation of this BAN - e.g. &quot;hyperscale&quot;, &quot;FX-billing&quot;, &quot;key-account&quot;. Used for filtering and reporting. Separate multiple tags with commas.</inlineHelpText>
    <label>BAN Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>