force-app/main/default/objects/BillingAccount__c/validationRules/VR_BAN_09_AdditionalEmailFmt.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_BAN_09_AdditionalEmailFmt</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Additional_Invoice_Email__c)), NOT(REGEX(Additional_Invoice_Email__c, &quot;^\\s*[^@\\s,]+@[^@\\s,]+\\.[^@\\s,]+(\\s*,\\s*[^@\\s,]+@[^@\\s,]+\\.[^@\\s,]+)?\\s*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Additional_Invoice_Email__c</errorDisplayField>
    <errorMessage>Enter up to two valid email addresses, separated by a comma (e.g. first@example.com, second@example.com). A space alone is not a valid separator.</errorMessage>
</ValidationRule>