force-app/main/default/objects/BillingAccount__c/listViews/All_Billing_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Billing_Accounts</fullName>
    <columns>NAME</columns>
    <columns>BAN_Number__c</columns>
    <columns>Alias__c</columns>
    <columns>Invoice_Frequency__c</columns>
    <columns>InvoiceDeliveryMode__c</columns>
    <columns>Charge_Period_Presentment__c</columns>
    <columns>Invoice_Presentment__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>Tags__c</columns>
    <columns>Additional_Invoice_Email__c</columns>
    <columns>Different_Invoice_Currency__c</columns>
    <columns>Invoice_Currency__c</columns>
    <columns>Status__c</columns>
    <columns>BAN_ID_INV_Label__c</columns>
    <columns>BAN_ID_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All BANs</label>
</ListView>