force-app/main/default/objects/BillingAccount__c/listViews/DE_PH_Country_Finance_BillingAccount.listView-meta.xml
<ListView>
    <fullName>DE_PH_Country_Finance_BillingAccount</fullName>
    <columns>NAME</columns>
    <columns>BAN_Number__c</columns>
    <columns>Alias__c</columns>
    <columns>Invoice_Frequency__c</columns>
    <columns>InvoiceDeliveryMode__c</columns>
    <columns>Charge_Period_Presentment__c</columns>
    <columns>Invoice_Presentment__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>Tags__c</columns>
    <columns>Additional_Invoice_Email__c</columns>
    <columns>Different_Invoice_Currency__c</columns>
    <columns>Invoice_Currency__c</columns>
    <columns>Status__c</columns>
    <columns>BAN_ID_INV_Label__c</columns>
    <columns>BAN_ID_Reference__c</columns>
    <filterScope>Queue</filterScope>
    <label>DE PH Country Finance</label>
    <queue>DE_PH_Country_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>